--- a/css/index.css
+++ b/css/index.css
@@ -6,10 +6,11 @@ html, body {
 #home {
   background: url(https://images.unsplash.com/photo-1449452198679-05c7fd30f416?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=73181f1c6d56b933b30de2bfe21fdf3b) no-repeat center center fixed;
   display: table;
-  height: 100%auto;
+  height: 100%;
   position: relative;
   width: 100%;
   background-size: cover;
+  color: white;
 }
 
 .text-vcenter {
