Added parallax example

--- a/css/index.sass
+++ b/css/index.sass
@@ -1,27 +1,24 @@
-html, body
-	height: 100%
-	width: 100%
-
+*, html
+	margin: 0px
+	padding: 0px
 
 #home
-	background: url(https://images.unsplash.com/photo-1449452198679-05c7fd30f416?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=73181f1c6d56b933b30de2bfe21fdf3b) no-repeat center center fixed
-	display: table
-	height: 100%
+	background: url(../images/bg_0.jpg) 50% 0 no-repeat fixed
+
+#section2
+	background: url(../images/bg_1.jpg) 50% 0 no-repeat fixed
+
+#section3
+	background: url(../images/bg_2.jpg) 50% 0 no-repeat fixed
+
+
+#home, #section2 ,#section3
+	margin: 0px auto
+	max-width: 1920px
+	min-height: 700px
 	position: relative
 	width: 100%
+	-webkit-background-size: cover
+	-moz-background-size: cover
+	-o-background-size: cover
 	background-size: cover
-	//-webkit-background-size: cover
-  //-moz-background-size: cover
-	//-o-background-size: cover
-	color: white
-
-.text-vcenter
-	display: table-cell
-	text-align: center
-	vertical-align: middle
-
-	h1
-		font-size: 4.5em
-		font-weight: 700
-		margin: 0
-		padding: 0s
