--- a/index.jade
+++ b/index.jade
@@ -28,8 +28,15 @@ html
 		title Planta Solar PR
 
 	body
-
-		#home.home
-			.text-vcenter
-				h1 Hello World
-				h3 This is bootstrap-based layout	
+		section(data-type="parallax_section", data-speed="10")#home
+			article
+				.geek
+				h2 Pagina: 1
+		section(data-type="parallax_section", data-speed="10")#section2
+			article
+				.geek
+				h2 Pagina: 2
+		section(data-type="parallax_section", data-speed="10")#section3
+			article
+				.geek
+				h2 Pagina: 3
