Finished Parallax example

--- a/css/index.sass
+++ b/css/index.sass
@@ -1,31 +1,18 @@
-*, html
-	margin: 0px
-	padding: 0px
-
-#home
-	background: url(../images/bg_0.jpg) 50% 0 no-repeat fixed
-
-#section2
-	background: url(../images/bg_1.jpg) 50% 0 no-repeat fixed
-
-#section3
-	background: url(../images/bg_2.jpg) 50% 0 no-repeat fixed
-
-
-#home, #section2 ,#section3
-	margin: 0px auto
-	max-width: 1920px
-	min-height: 700px
-	position: relative
-	width: 100%
-	-webkit-background-size: cover
-	-moz-background-size: cover
-	-o-background-size: cover
+.parallax
+	background-attachment: fixed
+	background-repeat: no-repeat
 	background-size: cover
+	height: 600px
+	margin: 0 auto
+	max-width: 1440px
+	overflow: hidden
+	padding: 0
+	position: relative
+	width: 100% !important
 
-#section2, #section3
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.4)
-	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.4)
-
-article
-	border-width: thin
+#section1
+	background-image: url(../images/bg_0.jpg)
+#section2
+	background-image: url(../images/bg_1.jpg)
+#section3
+	background-image: url(../images/bg_2.jpg)
