--- a/index.jade
+++ b/index.jade
@@ -28,15 +28,11 @@ html
 		title Planta Solar PR
 
 	body
-		section(data-type="parallax_section", data-speed="10")#home
-			article
-				.geek
-				h2 Pagina: 1
-		section(data-type="parallax_section", data-speed="10")#section2
-			article
-				.geek
-				h2 Pagina: 2
-		section(data-type="parallax_section", data-speed="10")#section3
-			article
-				.geek
-				h2 Pagina: 3
+		.parallax#section1
+			h3 Section 1
+			
+		.parallax#section2
+			h3 Section 2
+			
+		.parallax#section3
+			h3 Section 3
