Added New Pictures to the sections

--- a/css/index.sass
+++ b/css/index.sass
@@ -1,18 +1,25 @@
+*
+	margin: 0
+	padding: 0
+	font-family: 'Montserrat', sans-serif
+
 .parallax
 	background-attachment: fixed
 	background-repeat: no-repeat
-	background-size: cover
-	height: 600px
+	height: 100vh
 	margin: 0 auto
-	max-width: 1440px
 	overflow: hidden
 	padding: 0
 	position: relative
 	width: 100% !important
+	-webkit-background-size: cover
+	-moz-background-size: cover
+	-o-background-size: cover
+	background-size: cover
 
 #section1
-	background-image: url(../images/bg_0.jpg)
+	background-image: url(../images/section1_solar.jpg)
 #section2
-	background-image: url(../images/bg_1.jpg)
+	background-color: #EEEEEE
 #section3
-	background-image: url(../images/bg_2.jpg)
+	background-image: url(../images/section3_solar.jpg)
