--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ html
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		// Google fonts
-		link(href="http://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+		link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat")
 		// External Scripts
 		// jQuery
 		script(src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js", charset="utf-8")
