Section images are now darker

--- a/css/index.sass
+++ b/css/index.sass
@@ -17,9 +17,32 @@
 	-o-background-size: cover
 	background-size: cover
 
+.white-font
+	color: #EEEEEE
+
+
 #section1
-	background-image: url(../images/section1_solar.jpg)
-#section2
+	background-image: linear-gradient(rgba(0,0,0,0.5),
+	rgba(0,0,0,0.5)),
+	url(../images/section1_solar.jpg)
+
+	display: flex
+	justify-content: center
+	align-content: center
+	align-items: center
+	h3
+		font-size: 90px
+
+#section2s
 	background-color: #EEEEEE
 #section3
-	background-image: url(../images/section3_solar.jpg)
+	background-image: linear-gradient(rgba(0,0,0,0.5),
+	rgba(0,0,0,0.5)),
+	url(../images/section3_solar.jpg)
+
+	display: flex
+	justify-content: center
+	align-content: center
+	align-items: center
+	h3
+		font-size: 90px
