--- a/index.jade
+++ b/index.jade
@@ -28,11 +28,11 @@ html
 		title Planta Solar PR
 
 	body
-		.parallax#section1
+		.white-font.parallax#section1
 			h3 Section 1
 			
-		.parallax#section2
+		.container-fluid#section2
 			h3 Section 2
 			
-		.parallax#section3
+		.white-font.parallax#section3
 			h3 Section 3
