--- a/css/index.css
+++ b/css/index.css
@@ -19,14 +19,34 @@
   background-size: cover;
 }
 
-#section1 {
-  background-image: url(../images/section1_solar.jpg);
+.white-font {
+  color: #EEEEEE;
 }
 
-#section2 {
+#section1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/section1_solar.jpg);
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+#section1 h3 {
+  font-size: 90px;
+}
+
+#section2s {
   background-color: #EEEEEE;
 }
 
 #section3 {
-  background-image: url(../images/section3_solar.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/section3_solar.jpg);
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+#section3 h3 {
+  font-size: 90px;
 }
