--- a/css/index.sass
+++ b/css/index.sass
@@ -22,7 +22,7 @@
 
 
 #section1
-	background-image: linear-gradient(rgba(0,0,0,0.5),
+	background-image: linear-gradient(rgba(0,0,0,0.3),
 	rgba(0,0,0,0.5)),
 	url(../images/section1_solar.jpg)
 
@@ -30,8 +30,7 @@
 	justify-content: center
 	align-content: center
 	align-items: center
-	h3
-		font-size: 90px
+	flex-direction: column
 
 #section2s
 	background-color: #EEEEEE
@@ -44,5 +43,4 @@
 	justify-content: center
 	align-content: center
 	align-items: center
-	h3
-		font-size: 90px
+	flex-direction: column
