--- a/index.jade
+++ b/index.jade
@@ -29,7 +29,10 @@ html
 
 	body
 		.white-font.parallax#section1
-			h3 Section 1
+			h1 Planta Solar PR
+			h2 Diseñamos e Instalamos a tu necesidad
+			h3 Miembros de ACONER
+			img(src="../images/aconer.png", alt="")
 			
 		.container-fluid#section2
 			h3 Section 2
