--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,20 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.carousel-inner > .item > img {
+  width: 100%;
+  height: 400px;
+}
+
+#home-section1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 40vh;
+  width: 100%;
+  background-color: #EEEEEE;
+}
+
 .parallax {
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -32,7 +46,7 @@
   flex-direction: column;
 }
 
-#section2s {
+#section2 {
   background-color: #EEEEEE;
 }
 
@@ -43,4 +57,10 @@
   align-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+@media (max-width: 780px) {
+  .home-logo {
+    margin-top: 4%;
+  }
 }
