--- a/css/index.sass
+++ b/css/index.sass
@@ -3,6 +3,18 @@
 	padding: 0
 	font-family: 'Montserrat', sans-serif
 
+.carousel-inner > .item > img
+	width: 100%
+	height: 400px
+
+#home-section1
+	display: flex
+	align-items: center
+	justify-content: space-around
+	height: 40vh
+	width: 100%
+	background-color: #EEEEEE
+
 .parallax
 	background-attachment: fixed
 	background-repeat: no-repeat
@@ -32,7 +44,7 @@
 	align-items: center
 	flex-direction: column
 
-#section2s
+#section2
 	background-color: #EEEEEE
 #section3
 	background-image: linear-gradient(rgba(0,0,0,0.5),
@@ -44,3 +56,9 @@
 	align-content: center
 	align-items: center
 	flex-direction: column
+
+
+
+@media (max-width: 780px)
+	.home-logo
+		margin-top: 4%
