--- a/index.jade
+++ b/index.jade
@@ -74,19 +74,20 @@ html
 				.col-xs-12.col-md-3
 					i.fa.fa-cogs.fa-5x
 					h4 Experiencia
+					p Sobre 10 años de experiencia en la industria
 					
 				.col-xs-12.col-md-3
 					i.fa.fa-diamond.fa-5x
 					h4 100% Puertorriqueños
-					p Optamos por un Puerto Rico verde
+					p Conocemos y entendemos lo que se necesita aqui
 
 				.col-xs-12.col-md-3
 					i.fa.fa-cog.fa-5x
-					h4 Diseñamos ee instalamos a su necesidad
+					h4 Diseñamos e instalamos a su necesidad
 
 				.col-xs-12.col-md-3
 					img(src="../images/aconer.png", alt="")
-					h4 Acreditados por Aconer
+					h4 Miembros de ACONER
 
 		.white-font.parallax#section1
 			h1 Planta Solar PR
